--- a/game.html
+++ b/game.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Snake Game</title>
+    <iframe src="snakeMusic.mp3" allow="autoplay" style="display:none" id="iframeAudio" loop="true"></iframe>
   <style>
   html, body {
     height: 100%;
