--- a/How To Play.html
+++ b/How To Play.html
@@ -1,1 +1,10 @@
+<style>
+<body
+
+<body background="green1.png">
+
+
 <h1> Use arrows Keys to move, try and eat the apples to Gain length beocme a length of 10 to win!!!</h1>
+
+
+</style>
