--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ p.one {
 
 <div id="mySidenav" class="sidenav">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-  <a href="SnekGame.html"><h2>SnakeGame</h2></a>
+  <a href="game.html"><h2>SnakeGame</h2></a>
   <a href="AboutUsPage.html"><h2>Team</h2></a>
   <a href="How To Play.html"><h2>How To Play</h2></a>
   <a href="#"><h2>Contact</h1></a>
