--- a/AboutUsPage.html
+++ b/AboutUsPage.html
@@ -17,7 +17,7 @@ body {
 <center><h1>Henry</h1></center>
 <center>Assistant to the Chief Programmer</h2></center>
 <center><img src="Henry.png" ></center>
-
+<img src="Henry2.jpg">
 <center><h1>Ayden</h1></center>
 <center>CEO, Head Designer and Overall Great Guy</center>
 <center><img src="Ayden.png"></center>
